--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+:root {
+  --link: rgb(167 139 250);
+}
+
 html {
   scroll-padding-top: 30px; /* height of sticky header */
 }
@@ -13,6 +17,18 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+a:not(.special-link) {
+  color: var(--link);
+  background: linear-gradient(0, var(--link), var(--link)) no-repeat right
+    bottom / 0 1px;
+  transition: background-size 350ms;
+}
+
+a:not(.special-link):hover {
+  background-size: 100% 1px !important;
+  background-position-x: left !important;
 }
 
 * {
